<resources>
    <string name="app_name">KotlinDemo</string>

    <string name="black_space">&#x20;&#x20;&#x20;</string>
    <string name="space_demo">Score :\u0020&#x20;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="match_is_calling">invites you to a video call</string>
    <string name="transition">Transition Anim</string>
    <string name="transition_act">Transition Activity</string>
    <string name="delay_anim">Delay Anim</string>
    <string name="custom_anim">Custom Anim</string>
    <string name="title">Title</string>
    <string name="text1">text view one</string>
    <string name="text2">text view two</string>

    <string name="coins_for_prime">Top-up %1$s coins and upgrade to Prime now!</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="exit_match_confirm">Are you sure you want to stop matching?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="capture_img">Capture Image</string>

</resources>
