<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/transition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@string/transition"
            app:layout_constraintTop_toTopOf="parent"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/black_line"/>

    <TextView
            android:id="@+id/delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@string/delay_anim"
            app:layout_constraintTop_toTopOf="parent"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/black_line"/>

    <TextView
            android:id="@+id/custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@string/custom_anim"
            app:layout_constraintTop_toTopOf="parent"/>

    <View android:layout_width="match_parent" android:layout_height="1dp"
          android:background="@color/black_line"/>

</LinearLayout>