<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/btn_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_line">

        <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_14"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_16" />

        <View
                android:id="@+id/middle_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#33979797" />

        <TextView
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_14"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

    </LinearLayout>

    <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/exit_match_confirm"
            android:textColor="@color/black_alpha_80"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toTopOf="@+id/top_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <View
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33979797"
            app:layout_constraintBottom_toTopOf="@+id/btn_parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>

